tests/cases/smoke/invalid/func_mixed_call_style.dp
func greet(name: str, title: str = "Mr") -> str = title + " " + name
var bad = greet("Youniss", title: "Dr")
